<resources>
    <string name="app_name">ContactoXtra</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="lbl_registro_de_usuario">Registro de usuario</string>
    <string name="lbl_nombre_de_usuario">Nombre de usuario</string>
    <string name="lbl_apellido_de_usuario">Apellido de usuario</string>
    <string name="lbl_numero_de_telefono">Numero de telefono</string>
    <string name="lbl_fecha_de_cumplea_os">Fecha de cumpleaños</string>
    <string name="lbl_obtener_ubicacion">Obtener ubicacion</string>
    <string name="guardar">Guardar</string>
    <string name="title_contactos">Contactos</string>
    <string name="title_usuario">Usuario</string>
    <string name="title_recordatorios">Recordatorios</string>
    <string name="title_agregar_contacto">Agregar Contacto</string>
    <string name="txt_nombre_de_contacto">Nombre de contacto</string>
    <string name="txt_apellido_de_contacto">Apellido de contacto</string>
    <string name="txt_correo_electronico_de_contacto">Correo electronico de contacto</string>
    <string name="txt_numero_de_telefono_de_contacto">Numero de telefono de contacto</string>
    <string name="title_ubicaciones">Ubicaciones</string>
    <string name="lbl_compartir_contacto">Compartir Contacto</string>
    <string name="lbl_actualizar_contacto">Actualizar Contacto</string>
    <string name="lbl_buscar_contacto">Buscar contacto</string>
    <string name="title_contactos_dispositivo">Contactos Dispositivo</string>
    <string name="lbl_longitud">Longitud</string>
    <string name="lbl_latitud">Latitud</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="lbl_persona_ubicacion">Persona a quien pertenece ubicacion</string>
    <string name="lbl_categoria">Categoria</string>
    <string name="lbl_abrir_lubrication">Abrir Lubrication</string>
    <string name="lbl_compartir_ubicacion">Compartir Ubicacion</string>
    <string name="lbl_correo_electronico">Correo electronico</string>
    <string name="lbl_crear_usuario">Crear Usuario</string>
    <string name="lbl_editar_usuario">Editar Usuario</string>
</resources>