<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_ubicaciones">

    <fragment
        android:id="@+id/navigation_ubicaciones"
        android:name="hn.uth.contactoxtra.ui.home.HomeFragment"
        android:label="@string/title_ubicaciones"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_usuario"
        android:name="hn.uth.contactoxtra.ui.usuario.UsuarioFragment"
        android:label="@string/title_usuario"
        tools:layout="@layout/fragment_usuario" />

    <fragment
        android:id="@+id/navigation_contactos"
        android:name="hn.uth.contactoxtra.ui.contactos.ContactosFragment"
        android:label="@string/title_contactos"
        tools:layout="@layout/fragment_contactos" />

    <fragment
        android:id="@+id/crearContactoFragment"
        android:name="hn.uth.contactoxtra.ui.crearContactos.CrearContactoFragment"
        android:label="Crear Contacto"
        tools:layout="@layout/fragment_crear_contacto" />

    <fragment
        android:id="@+id/detalleContactoFragment"
        android:name="hn.uth.contactoxtra.ui.crearContactos.DetalleContactoFragment"
        android:label="Ver detalles del contacto"
        tools:layout="@layout/fragment_detalle_contacto" />

    <action
        android:id="@+id/action_contactosFragment_to_detalleContactoFragment"
        app:destination="@id/detalleContactoFragment" />

    <action
        android:id="@+id/action_fragmentActual_to_crearContactoFragment"
        app:destination="@id/crearContactoFragment" />

    <action
        android:id="@+id/action_crearContactoFragment_to_contactosFragment"
        app:destination="@id/navigation_contactos" />

</navigation>