<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_usuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="170dp"
        android:layout_height="123dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mobile_login" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/lbl_registro_de_usuario"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNombre"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/lbl_nombre_de_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilApellido"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/lbl_apellido_de_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilNombre">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTelefono"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/lbl_numero_de_telefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilApellido">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCorreo"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Correo electronico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilTelefono">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/lbl_fecha_de_cumplea_os"
        app:layout_constraintStart_toStartOf="@+id/tilTelefono"
        app:layout_constraintTop_toBottomOf="@+id/tilTelefono" />

    <TextView
        android:id="@+id/txtCumple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintBottom_toBottomOf="@+id/btnFecha"
        app:layout_constraintStart_toEndOf="@+id/btnFecha"
        app:layout_constraintTop_toTopOf="@+id/btnFecha"
        tools:text="Fecha" />

    <Button
        android:id="@+id/btnUbicacion"
        android:layout_width="64dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        app:icon="@drawable/baseline_add_home_24"
        app:layout_constraintStart_toStartOf="@+id/btnFecha"
        app:layout_constraintTop_toBottomOf="@+id/btnFecha" />

    <TextView
        android:id="@+id/txtLongitud"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@+id/txtLatitud"
        app:layout_constraintTop_toTopOf="@+id/txtLatitud"
        tools:text="Longitud Hogar" />

    <TextView
        android:id="@+id/txtLatitud"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@+id/btnUbicacion"
        app:layout_constraintTop_toTopOf="@+id/btnUbicacion"
        tools:text="Latitud Hogar" />

    <Button
        android:id="@+id/btnUbicaciontrabajo"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:icon="@drawable/baseline_add_business_24"
        app:layout_constraintStart_toStartOf="@+id/btnUbicacion"
        app:layout_constraintTop_toBottomOf="@+id/btnUbicacion" />


    <TextView
        android:id="@+id/txtLongitudtrabajo"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@+id/txtLatitudtrabajo"
        app:layout_constraintTop_toTopOf="@+id/txtLatitudtrabajo"
        tools:text="Longitud Trabajo" />

    <TextView
        android:id="@+id/txtLatitudtrabajo"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@+id/btnUbicaciontrabajo"
        app:layout_constraintTop_toTopOf="@+id/btnUbicaciontrabajo"
        tools:text="Latitud Trabajo"  />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUbicaciontrabajo" />
</androidx.constraintlayout.widget.ConstraintLayout>